--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-        <!DOCTYPE html>
+<!DOCTYPE html>
         <html lang="en">
         <head>
             <meta charset="UTF-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Document</title>
-            <link rel="stylesheet" href="style.css">
+            <link rel="stylesheet" href="style.css"> 
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+              
         </head>
         <body>
             <header class="cabecalho">
@@ -19,11 +23,55 @@
             <div class="escola-div-conteudo">
                 <h2 class="escola-titulo">Sobre a escola</h2>
                 <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da programação</p>
-                <p class="escola-texto-dois"> A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
+                <p class="escola-texto-dois"> A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
 
             </div>
             <img class="escola-imagem" src="Teacher-pana.png" alt="Professor no quadro."> 
          </section>
+         <section class="estudante">
+            <h2 class="estudante-titulo">quem são nossos estudantes?</h2>
+            <div class="estudante-todos">
+            <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="WhatsApp-Image-2023-04-13-at-09.52.06.jpeg" alt="fotoda Ana Castela">
+                <h3 class="estudante-nome">Ana Castela</h3>
+                <img class="estudante-icone" src="github.png" alt="icone github">
+                <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
+                <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="WhatsApp-Image-2023-04-13-at-09.52.06.jpeg" alt="fotoda Ana Castela">
+                <h3 class="estudante-nome">Ana Castela</h3>
+                <img class="estudante-icone" src="github.png" alt="icone github">
+                <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
+                <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+            </div> 
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="WhatsApp-Image-2023-04-13-at-09.52.06.jpeg" alt="fotoda Ana Castela">
+                <h3 class="estudante-nome">Ana Castela</h3>
+                <img class="estudante-icone" src="github.png" alt="icone github">
+                <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
+                <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+            </div>
+            <span></span>
+            <span></span>
+             <div class="estudante-div">
+                <img class="estudante-imagem" src="WhatsApp-Image-2023-04-13-at-09.52.06.jpeg" alt="fotoda Ana Castela">
+                <h3 class="estudante-nome">Ana Castela</h3>
+                <img class="estudante-icone" src="github.png" alt="icone github">
+                <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
+                <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+            </div>
+             <div class="estudante-div">
+                <img class="estudante-imagem" src="WhatsApp-Image-2023-04-13-at-09.52.06.jpeg" alt="fotoda Ana Castela">
+                <h3 class="estudante-nome">Ana Castela</h3>
+                <img class="estudante-icone" src="github.png" alt="icone github">
+                <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
+                <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+            </div>
+            </div>
+        </section>
+
      </body>
 
      </html>
