--- a/index.html
+++ b/index.html
@@ -1,77 +1,100 @@
 <!DOCTYPE html>
-        <html lang="en">
-        <head>
-            <meta charset="UTF-8">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Document</title>
-            <link rel="stylesheet" href="style.css"> 
-            <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-              
-        </head>
-        <body>
-            <header class="cabecalho">
-                <img class="cabecalho-imagem" src="c:\Users\karla\Downloads\logo.alurastart.png" alt="logo da alurastart">
-             <ul class="cabecalho-lista">
-                <li class="cabecalho-lista-item">Escola</li>
-                <li class="cabecalho-lista-item">Estudante</li>
-             </ul>
-         </header>
-         <section class="escola">
-            <div class="escola-div-conteudo">
-                <h2 class="escola-titulo">Sobre a escola</h2>
-                <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da programação</p>
-                <p class="escola-texto-dois"> A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Equipe Alura Start</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="logo.alura.png" alt="logo da alura start">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabecalho-lista-item">Estudante</li>
+        </ul>
+    </header>
+    <section class="escola">
+        <div class="escola-div-conteudo">
+            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
+            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+        </div>
+        <img class="escola-imagem" src="Teacher-pana.png" alt="imagem que representa uma professora em sala de aula">
+    </section>
+    <section class="estudante">
+        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <div class="estudante-todos">
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="henrique.png" alt="foto do henrique">
+            <h3 class="estudante-nome">Henrique</h3>
+            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/henriqueejuliano/?hl=pt_BR"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="leox.jpg" alt="foto da Leonardo">
+            <h3 class="estudante-nome">Leonardo</h3>
+            <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/leonardo/?hl=pt_BR"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="gudtavo.webp" alt="foto da gustavo">
+            <h3 class="estudante-nome">Gustavo</h3>
+            <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/gustavolimapelobrasiloficial/?hl=pt_BR"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        </div>
+        <span></span>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="marilha.jpg" alt="foto da Marilha">
+            <h3 class="estudante-nome">Marilha</h3>
+            <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://www.linkedin.com/in/joicebarbaresco/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/mariliamendoncacantora/?hl=pt_BR"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="mimi.webp" alt="foto da Simone">
+            <h3 class="estudante-nome">Simone</h3>
+            <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://www.linkedin.com/in/mariageovanna"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/simonemendes/?hl=pt_BR"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="ninha.jpeg" alt="foto da ana">
+            <h3 class="estudante-nome">Ana Castela</h3>
+            <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://www.linkedin.com/in/mariageovanna"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/anacastelacantora/?hl=pt_BR"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        </div>
+        <span></span>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="doutora.webp" alt="foto da deolaine">
+            <h3 class="estudante-nome">deolaine</h3>
+            <a href="https://github.com/rafaelamunhoz12"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/dra.deolanebezerra/?hl=pt_BR"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="gustavo.jpeg" alt="foto da  gustavo">
+            <h3 class="estudante-nome">gustavo mioto</h3>
+            <a href="https://github.com/Thaispianucci"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://www.linkedin.com/in/thais-pianucci-benedicto-54a9a416/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/gustavomioto/?hl=pt_BR"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        </div>
 
-            </div>
-            <img class="escola-imagem" src="Teacher-pana.png" alt="Professor no quadro."> 
-         </section>
-         <section class="estudante">
-            <h2 class="estudante-titulo">quem são nossos estudantes?</h2>
-            <div class="estudante-todos">
-            <span></span>
-            <div class="estudante-div">
-                <img class="estudante-imagem" src="WhatsApp-Image-2023-04-13-at-09.52.06.jpeg" alt="fotoda Ana Castela">
-                <h3 class="estudante-nome">Ana Castela</h3>
-                <img class="estudante-icone" src="github.png" alt="icone github">
-                <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-                <img class="estudante-icone" src="instagram.png" alt="icone instagram">
-            </div>
-            <div class="estudante-div">
-                <img class="estudante-imagem" src="WhatsApp-Image-2023-04-13-at-09.52.06.jpeg" alt="fotoda Ana Castela">
-                <h3 class="estudante-nome">Ana Castela</h3>
-                <img class="estudante-icone" src="github.png" alt="icone github">
-                <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-                <img class="estudante-icone" src="instagram.png" alt="icone instagram">
-            </div> 
-            <div class="estudante-div">
-                <img class="estudante-imagem" src="WhatsApp-Image-2023-04-13-at-09.52.06.jpeg" alt="fotoda Ana Castela">
-                <h3 class="estudante-nome">Ana Castela</h3>
-                <img class="estudante-icone" src="github.png" alt="icone github">
-                <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-                <img class="estudante-icone" src="instagram.png" alt="icone instagram">
-            </div>
-            <span></span>
-            <span></span>
-             <div class="estudante-div">
-                <img class="estudante-imagem" src="WhatsApp-Image-2023-04-13-at-09.52.06.jpeg" alt="fotoda Ana Castela">
-                <h3 class="estudante-nome">Ana Castela</h3>
-                <img class="estudante-icone" src="github.png" alt="icone github">
-                <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-                <img class="estudante-icone" src="instagram.png" alt="icone instagram">
-            </div>
-             <div class="estudante-div">
-                <img class="estudante-imagem" src="WhatsApp-Image-2023-04-13-at-09.52.06.jpeg" alt="fotoda Ana Castela">
-                <h3 class="estudante-nome">Ana Castela</h3>
-                <img class="estudante-icone" src="github.png" alt="icone github">
-                <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-                <img class="estudante-icone" src="instagram.png" alt="icone instagram">
-            </div>
-            </div>
-        </section>
-
-     </body>
-
-     </html>
+    </div>
+    </section>
+    <footer class="rodape">
+        <img class="rodape-imagem"src="logo.alura.png" alt="logo da alura start">
+    </footer>
+</body>
+</html>
